# gotham

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE  LICENSE-MIT  README-dev.md  README.md  readme.md  rustfmt.toml
examples/basic_path_extractor/: Cargo.toml
examples/basic_path_extractor/src/: main.rs
examples/cookies/introduction/: Cargo.toml  README.md
examples/cookies/introduction/src/: main.rs
examples/custom_service/: Cargo.toml  README.md
examples/custom_service/src/: main.rs
examples/diesel/: Cargo.toml  README.md  products.db  tests.db
examples/diesel/migrations/2018-01-31-183719_create_posts/: down.sql  up.sql
examples/diesel/migrations/2019-04-09-111334_create_products/: down.sql  up.sql
examples/diesel/src/: lib.rs  main.rs  models.rs  schema.rs
examples/example_contribution_template/name/: Cargo.toml  README.md
examples/example_contribution_template/name/src/: main.rs
examples/handlers/async_handlers/: Cargo.toml  README.md
examples/handlers/async_handlers/src/: main.rs
examples/handlers/form_urlencoded/: Cargo.toml  README.md
examples/handlers/form_urlencoded/src/: main.rs
examples/handlers/multipart/: Cargo.toml  README.md
examples/handlers/multipart/src/: main.rs
examples/handlers/request_data/: Cargo.toml  README.md
examples/handlers/request_data/src/: main.rs
examples/handlers/simple_async_handlers/: Cargo.toml  README.md
examples/handlers/simple_async_handlers/src/: main.rs
examples/handlers/simple_async_handlers_await/: Cargo.toml  README.md
examples/handlers/simple_async_handlers_await/src/: main.rs
examples/hello_header/: Cargo.toml
examples/hello_header/src/: main.rs
examples/hello_router/: Cargo.toml  README.md
examples/hello_router/src/: main.rs
examples/hello_world/: Cargo.toml  README.md
examples/hello_world/src/: main.rs
examples/hello_world_tls/: Cargo.toml  README.md
examples/hello_world_tls/src/: main.rs
examples/hello_world_until/: Cargo.toml  README.md
examples/hello_world_until/src/: main.rs
examples/kitchen-sink/: Cargo.toml
examples/kitchen-sink/src/: main.rs  middleware.rs
examples/middleware_database/: Cargo.toml  README.md
examples/middleware_database/src/: lib.rs  main.rs
examples/middleware_database/src/config/: middleware.rs  mod.rs  routes.rs
examples/middleware_database/src/controllers/: mod.rs  pages.rs
examples/openssl/: Cargo.toml  README.md
examples/openssl/src/: main.rs
examples/shared_state/: Cargo.toml  README.md
examples/shared_state/src/: main.rs
examples/todo-session/: Cargo.toml
examples/todo-session/src/: bin.rs  lib.rs
examples/todo-session/src/apps/todo/: mod.rs
examples/websocket/: Cargo.toml  README.md
examples/websocket/src/: index.html  main.rs  ws.rs
gotham/: Cargo.toml
gotham/benches/: file_handler.rs
gotham/resources/test/assets/: doc.html
gotham/resources/test/assets/scripts/: script.js
gotham/resources/test/assets/styles/: style.css
gotham/resources/test/static_files/: doc.html.br  file.txt
gotham/src/: .rustfmt.toml  async_test.rs  clone_sockets.rs  error.rs  lib.rs  plain.rs  prelude.rs  socket_queue.rs  test.rs  tls.rs
gotham/src/extractor/: internal.rs  mod.rs  path.rs  query_string.rs
gotham/src/handler/: accepted_encoding.rs  error.rs  mod.rs  static_file.rs  trap.rs
gotham/src/handler/assets/: accepted_encoding.rs  mod.rs
gotham/src/helpers/: mod.rs  timing.rs
gotham/src/helpers/http/: mod.rs
gotham/src/helpers/http/header/: mod.rs  x_frame_options.rs  (+4 more)
gotham/src/http/: mod.rs
gotham/src/http/header/: mod.rs  x_content_type_options.rs  x_frame_options.rs  x_request_id.rs  x_xss_protection.rs
gotham/src/http/request/: path.rs  query_string.rs
gotham/src/http/response/: mod.rs
gotham/src/middleware/: chain.rs  cookie.rs  logger.rs  mod.rs  pipeline.rs  security.rs  timer.rs
gotham/src/middleware/cookie/: mod.rs
gotham/src/middleware/logger/: mod.rs
gotham/src/middleware/security/: mod.rs
gotham/src/middleware/session/: mod.rs  rng.rs
gotham/src/middleware/state/: mod.rs
gotham/src/middleware/timer/: mod.rs
gotham/src/middleware/workers/: job.rs  middleware.rs  mod.rs  pool.rs
gotham/src/os/: mod.rs  unix.rs  windows.rs
gotham/src/pipeline/: chain.rs  mod.rs  set.rs  single.rs
gotham/src/plain/: async_test.rs  mod.rs  test.rs
gotham/src/protocol/header/: mod.rs  x_content_type_options.rs  x_frame_options.rs  x_request_id.rs  x_runtime_microseconds.rs  x_xss_protection.rs
gotham/src/protocol/request/: mod.rs  path.rs  query_string.rs
gotham/src/protocol/response/: mod.rs
gotham/src/router/: mod.rs  non_match.rs
gotham/src/router/builder/: associated.rs  draw.rs  mod.rs  modify.rs  replace.rs  single.rs
gotham/src/router/request/: path.rs  query_string.rs
gotham/src/router/response/: extender.rs  finalizer.rs  mod.rs
gotham/src/router/route/: dispatch.rs  mod.rs
gotham/src/router/tree/: mod.rs  node.rs  regex.rs  segment.rs
gotham/src/service/: mod.rs  timing.rs  trap.rs
gotham/src/start/: mod.rs
gotham/src/state/: client_addr.rs  data.rs  from_state.rs  mod.rs  request_id.rs
gotham/src/test/: async_test.rs  mod.rs  request.rs
gotham/src/tls/: async_test.rs  build_pki.sh  ca.cfg  ca_cert.pem  cert.pem  key.pem  mod.rs  srv.cfg  test.rs  test_chain.pem  test_key.pem  tls_ca_cert.der  tls_cert.der  tls_key.der  tls_new_cert.sh
gotham_derive/: Cargo.toml
gotham_derive/src/: extenders.rs  extractors.rs  helpers.rs  lib.rs  new_middleware.rs  path_template.rs  request_path_extractor.rs  state.rs
middleware/diesel/: Cargo.toml  README.md
middleware/diesel/src/: lib.rs  repo.rs  state_data.rs
middleware/jwt/: Cargo.toml  README.md
middleware/jwt/src/: lib.rs  middleware.rs  state_data.rs
middleware/r2d2/: Cargo.toml  README.md
middleware/r2d2/src/: lib.rs  state_data.rs
middleware/template/: Cargo.toml  README.md
middleware/template/src/: lib.rs
misc/borrow_bag/: Cargo.toml  README.md
misc/borrow_bag/src/: append.rs  handle.rs  lib.rs  lookup.rs
(+229 files in other folders)
