[package]
name = "gotham"
version = "0.6.0" # Alter html_root_url in lib.rs also
authors = ["Shaun Mangelsdorf <s.mangelsdorf@gmail.com>",
          "Colin Bankier <colinbankier@gmail.com>",
		  "Dominic Meiser <git@msrd0.de>",
          "Isaac Whitfield <iw@whitfin.io>",
          "Judson Lester <nyarly@gmail.com>",
          "Bradley Beddoes <bradleybeddoes@gmail.com>"]
description = "A flexible web framework that promotes stability, safety, security and speed."
license = "MIT/Apache-2.0"
homepage = "https://gotham.rs"
repository = "https://github.com/gotham-rs/gotham"
readme = "README.md"
categories = ["web-programming::http-server"]
keywords = ["http", "async", "web", "framework", "server"]
edition = "2018"

[features]
default = ["derive", "rustls"]
derive = ["gotham_derive"]
rustls = ["tokio-rustls"]

[dependencies]
borrow-bag = { path = "../misc/borrow_bag", version = "1.1" }
gotham_derive = { path = "../gotham_derive", version = "0.6", optional = true }

anyhow = "1.0"
base64 = "0.13"
bincode = "1.0"
bytes = "1.0"
chrono = { version = "0.4", features = ["clock"], default-features = false }
cookie = "0.15"
futures-util = "0.3.14"
http = "0.2"
httpdate = "1.0"
hyper = { version = "0.14.3", features = ["full"] }
linked-hash-map = "0.5.3"
log = "0.4"
mime = "0.3.15"
mime_guess = "2.0.1"
num_cpus = "1.8"
percent-encoding = "2.1"
pin-project = "1.0.0"
rand = "0.8"
rand_chacha = "0.3"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "time", "fs", "io-util"] }
tokio-rustls = { version = "0.22", optional = true }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
futures-executor = "0.3.14"
thiserror = "1.0"
tokio = {version = "1.0", features = ["macros", "test-util"]}

[badges]
travis-ci = { repository = "gotham-rs/gotham", branch = "master" }
