[package]
name = "gotham"
version = "0.7.1" # Alter html_root_url in lib.rs also
authors = ["Shaun Mangelsdorf <s.mangelsdorf@gmail.com>",
          "Colin Bankier <colinbankier@gmail.com>",
          "Dominic Meiser <git@msrd0.de>",
          "Isaac Whitfield <iw@whitfin.io>",
          "Judson Lester <nyarly@gmail.com>",
          "Bradley Beddoes <bradleybeddoes@gmail.com>"]
description = "A flexible web framework that promotes stability, safety, security and speed."
license = "MIT/Apache-2.0"
homepage = "https://gotham.rs"
repository = "https://github.com/gotham-rs/gotham"
readme = "README.md"
categories = ["web-programming::http-server"]
keywords = ["http", "async", "web", "framework", "server"]
edition = "2018"
exclude = ["src/tls/tls_new_cert.sh"]

[features]
default = ["derive", "http2", "session", "testing"]
derive = ["gotham_derive"]
http2 = ["hyper/http2"]
rustls = ["tokio-rustls"]
session = ["bincode", "linked-hash-map"]
testing = ["hyper/client"]

[dependencies]
borrow-bag = { path = "../misc/borrow_bag", version = "1.1" }
gotham_derive = { path = "../gotham_derive", version = "0.7", optional = true }

anyhow = "1.0"
base64 = "0.13"
bincode = { version = "1.0", optional = true }
bytes = "1.0"
cookie = "0.16"
futures-util = "0.3.14"
httpdate = "1.0"
hyper = { version = "0.14.12", features = ["http1", "runtime", "server", "stream"] }
linked-hash-map = { version = "0.5.3", optional = true }
log = "0.4"
mime = "0.3.15"
mime_guess = "2.0.1"
num_cpus = "1.8"
percent-encoding = "2.1"
pin-project = "1.0.0"
rand = "0.8"
rand_chacha = "0.3"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = {version = "0.3.4", default-features = false, features = ["std", "formatting", "macros"]}
tokio = { version = "1.11.0", features = ["net", "rt-multi-thread", "time", "fs", "io-util"] }
tokio-rustls = { version = "0.23", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
futures-executor = "0.3.14"
tokio = { version = "1.11.0", features = ["macros", "test-util"] }

[package.metadata.docs.rs]
all-features = true
