[package]
name = "gotham_derive"
version = "0.3.0-dev"
authors = ["Bradley Beddoes <bradleybeddoes@gmail.com>",
           "Shaun Mangelsdorf <s.mangelsdorf@gmail.com>"]
description = "Macros 1.1 implementations for Gotham traits"
license = "MIT/Apache-2.0"
repository = "https://github.com/gotham-rs/gotham"
categories = ["web-programming::http-server"]
keywords = ["http", "async", "web", "framework", "gotham"]

[dependencies]
syn = "0.15"
quote = "0.6"

[lib]
proc-macro = true
