[package]
name = "gotham_derive"
version = "0.6.0"
authors = ["Bradley Beddoes <bradleybeddoes@gmail.com>",
          "Colin Bankier",
		  "Dominic Meiser <git@msrd0.de>",
          "Isaac Whitfield <iw@whitfin.io>",
          "Judson Lester <nyarly@gmail.com>",
          "Shaun Mangelsdorf <s.mangelsdorf@gmail.com>"]
description = "Macros 1.1 implementations for Gotham traits"
license = "MIT/Apache-2.0"
repository = "https://github.com/gotham-rs/gotham"
categories = ["web-programming::http-server"]
keywords = ["http", "async", "web", "framework", "gotham"]
edition = "2018"

[dependencies]
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true
