[package]
name = "gotham_derive"
version = "0.7.1"
authors = ["Bradley Beddoes <bradleybeddoes@gmail.com>",
           "Colin Bankier",
           "Dominic Meiser <git@msrd0.de>",
           "Isaac Whitfield <iw@whitfin.io>",
           "Judson Lester <nyarly@gmail.com>",
           "Shaun Mangelsdorf <s.mangelsdorf@gmail.com>"]
description = "Private implementation detail of the gotham framework"
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories = ["web-programming::http-server"]
keywords = ["http", "async", "web", "framework", "gotham"]
edition = "2018"

[dependencies]
syn = "2.0"
quote = "1.0"

[lib]
proc-macro = true
