[package]
name = "basic_path_extractor"
version = "0.1.0"
authors = ["Nicolas Pochet <npochet@gmail.com>"]

[dependencies]
gotham = { path = "../../gotham" }
gotham_derive = { path = "../../gotham_derive" }

hyper = "0.11"
futures = "~0.1.11"
mime = "0.3"
log = "0.3"
serde = "~1.0"
serde_derive = "~1.0"