[package]
name = "gotham_examples_custom_service"
description = "Using Gotham in a pre-existing Hyper service"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
gotham = { path = "../../gotham" }
http = "0.2"
tokio = { version = "1.0", features = ["full"] }
