[package]
name = "gotham_examples_custom_service"
description = "Using Gotham in a pre-existing Hyper service"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
gotham = { path = "../../gotham" }
anyhow = "1.0"
futures-util = "0.3.14"
tokio = { version = "1.11.0", features = ["full"] }
