[package]
name = "gotham_diesel_example"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Pochet <npochet@gmail.com>", "Colin Bankier <colinbankier@gmail.com>"]
description = "An example of the diesel middleware used with Gotham"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
gotham = "0.3"
gotham_derive = "0.3"
gotham_middleware_diesel = { path = "../../middleware/diesel"}

hyper = "0.12"
futures = "0.1"
mime = "0.3"
log = "0.3"
diesel = { version = "1.4", features = ["sqlite", "extras"] }
diesel_migrations = { version = "1.4", features = ["sqlite"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
