[package]
name = "gotham_diesel_example"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Pochet <npochet@gmail.com>", "Colin Bankier <colinbankier@gmail.com>"]
description = "An example of the diesel middleware used with Gotham"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
gotham = { path = "../../gotham/"}
gotham_derive = { path = "../../gotham_derive/" }
gotham_middleware_diesel = { path = "../../middleware/diesel"}
hyper = "0.13.1"
futures = "0.3.1"
mime = "0.3"
log = "0.4"
diesel = { version = "1.4", features = ["sqlite", "extras"] }
diesel_migrations = { version = "1.4", features = ["sqlite"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
diesel_migrations = "1.4.0"
tokio = { version = "0.2.6", features = ["full"] }
