[package]
name = "gotham_diesel_example"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Pochet <npochet@gmail.com>", "Colin Bankier <colinbankier@gmail.com>"]
description = "An example of the diesel middleware used with Gotham"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
gotham = { path = "../../gotham/"}
gotham_middleware_diesel = { path = "../../middleware/diesel"}
futures-util = "0.3.14"

log = "0.4"
diesel = { version = "1.4.6", features = ["r2d2", "sqlite"] }
diesel_migrations = { version = "1.4", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
diesel_migrations = "1.4.0"
tokio = { version = "1.0", features = ["full"] }
