[package]
name = "hello_header"
version = "0.1.0"
authors = ["Bradley Beddoes <bradleybeddoes@gmail.com>",
           "Shaun Mangelsdorf <s.mangelsdorf@gmail.com>"]
description = "A simple introduction to working with Gotham and custom headers."
license = "MIT/Apache-2.0"
readme = "README.md"
publish = false

[dependencies]
gotham = { path = "../../gotham" }

hyper = "0.11"
futures = "~0.1.11"
mime = "0.3"
