[package]
name = "hello_router"
version = "0.1.0"
authors = ["Bradley Beddoes <bradleybeddoes@gmail.com>",
           "Shaun Mangelsdorf <s.mangelsdorf@gmail.com>"]
description = "A Hello World example application for working with the Gotham Router."
license = "MIT/Apache-2.0"
readme = "README.md"
publish = false

[dependencies]
gotham = { path = "../../gotham" }

hyper = "0.11"
futures = "~0.1.11"
mime = "0.3"
