[package]
name = "hello_world"
version = "0.2.0"
authors = ["Bradley Beddoes <bradleybeddoes@gmail.com>",
           "Shaun Mangelsdorf <s.mangelsdorf@gmail.com>"]
description = "A Hello World example application for working with Gotham."
license = "MIT/Apache-2.0"
readme = "README.md"
publish = false

[dependencies]
gotham = { path = "../../gotham" }

hyper = "0.11"
futures = "~0.1.11"
mime = "0.3"
