[package]
name = "gotham_examples_shared_state"
description = "An introduction to shared state across Gotham handlers"
version = "0.0.0"
publish = false

[dependencies]
gotham = { path = "../../gotham" }
gotham_derive = { path = "../../gotham_derive" }

hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
mime = "0.3"
