[package]
name = "websocket"
version = "0.1.0"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = { path = "../../gotham" }
futures = "0.3.1"
tokio-tungstenite = "0.11"
tokio = "0.3"
pretty_env_logger = "0.4"
sha1 = "*"
base64 = "0.13"
