[package]
name = "websocket"
version = "0.1.0"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = { path = "../../gotham" }
futures-util = "0.3.14"
tokio-tungstenite = "0.19"
tokio = "1.11.0"
pretty_env_logger = "0.5"
sha1 = "0.10"
base64 = "0.21"
