[package]
name = "gotham_middleware_diesel"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>"]
edition = "2018"
description = "A Gotham Middleware that provides access to a Diesel connection via an R2D2 pool to allow other Middleware and Handlers to interact with a database."
license = "MIT/Apache-2.0"
homepage = "https://gotham.rs"
repository = "https://github.com/gotham-rs/gotham"
readme = "README.md"
categories = ["web-programming::http-server"]
keywords = ["http", "async", "web", "gotham", "diesel"]

[dependencies]
futures = "0.3.1"
gotham = "0.5.0-dev"
gotham_derive = "0.5.0-dev"
diesel = { version = "1.3", features = ["r2d2"] }
r2d2 = "0.8"
tokio-threadpool = "0.1"
log = "0.4"

[dev-dependencies]
diesel = { version = "1", features = ["sqlite"] }
mime = "0.3"
hyper = "0.13.1"
tokio = { version = "0.2.6", features = ["full"] }
