[package]
name = "gotham_middleware_diesel"
version = "0.4.0"
authors = ["colinbankier <colinbankier@gmail.com>"]
edition = "2018"
description = "A Gotham Middleware that provides access to a Diesel connection via an R2D2 pool to allow other Middleware and Handlers to interact with a database."
license = "MIT/Apache-2.0"
homepage = "https://gotham.rs"
repository = "https://github.com/gotham-rs/gotham"
readme = "README.md"
categories = ["web-programming::http-server"]
keywords = ["http", "async", "web", "gotham", "diesel"]

[dependencies]
futures-util = "0.3.14"
gotham = { path = "../../gotham", version = "0.7.1", default-features = false, features = ["derive"] }
diesel = { version = "2.0.1", features = ["r2d2"] }
r2d2 = "0.8"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"

[dev-dependencies]
diesel = { version = "2.0.1", features = ["sqlite"] }
