[package]
name = "gotham_middleware_jwt"
version = "0.8.0"
authors = ["Nicholas Young <nyoung@uptime.ventures>",
          "Colin Bankier <colinbankier@gmail.com>",
          "Isaac Whitfield <iw@whitfin.io>",
          "Judson Lester <nyarly@gmail.com>",
          "Bradley Beddoes <bradleybeddoes@gmail.com>"]
description = "JWT middleware for the Gotham web framework."
repository = "https://github.com/gotham-rs/gotham"
keywords = ["gotham-middleware", "jwt", "jsonwebtoken", "authentication"]
homepage = "https://gotham.rs"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
futures-util = "0.3.14"
gotham = { path = "../../gotham", version = "0.7.3", default-features = false, features = ["derive"] }
jsonwebtoken = { version = "8.0", default-features = false }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
