[package]
name = "borrow-bag"
version = "0.4.0"
authors = ["Shaun Mangelsdorf <s.mangelsdorf@gmail.com>",
           "Bradley Beddoes <bradleybeddoes@gmail.com>"]
description = "A type-safe, heterogeneous collection with zero-cost add and borrow"
build = "build.rs"
license = "MIT/Apache-2.0"
homepage = "https://gotham.rs"
repository = "https://github.com/gotham-rs/gotham"

[dependencies]

[build-dependencies]
skeptic = "0.9"

[dev-dependencies]
skeptic = "0.9"
