[package]
name = "gotham_examples_cookies_introduction"
description = "An introduction to storing and retrieving cookies with the Gotham web framework."
version = "0.0.0"
authors = ["Daniel Wagner-Hall <dawagner@gmail.com>"]
publish = false

[dependencies]
gotham = { path = "../../../gotham" }

hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
mime = "0.3"
cookie = "0.12"
