[package]
name = "gotham_examples_handlers_async_handlers"
description = "An example that does asynchronous work before responding"
version = "0.0.0"
authors = ["David Laban <alsuren@gmail.com>"]
publish = false

[dependencies]
gotham = { path = "../../../gotham" }
gotham_derive = { path = "../../../gotham_derive" }

hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
mime = "0.3"
futures-preview = "0.3.0-alpha.19"
serde = "1"
serde_derive = "1"
