[package]
name = "gotham_examples_handlers_async_handlers"
description = "An example that does asynchronous work before responding"
version = "0.0.0"
authors = ["David Laban <alsuren@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
gotham = { path = "../../../gotham" }
gotham_derive = { path = "../../../gotham_derive" }

mime = "0.3"
futures-util = "0.3.14"
serde = "1"
serde_derive = "1"
