[package]
name = "gotham_examples_handlers_form_urlencoded"
description = "An example of decoding requests from an HTML form element"
version = "0.0.0"
authors = ["Jacob Budin <self@jacobbudin.com>"]
publish = false

[dependencies]
gotham = { path = "../../../gotham" }

hyper = "0.12"
mime = "0.3"
futures = "0.1"
url = "2.1"
