[package]
name = "gotham_examples_handlers_form_urlencoded"
description = "An example of decoding requests from an HTML form element"
version = "0.0.0"
authors = ["Jacob Budin <self@jacobbudin.com>"]
publish = false

[dependencies]
gotham = { path = "../../../gotham" }

hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
mime = "0.3"
futures-preview = "0.3.0-alpha.19"
url = "2.1"
