[package]
name = "gotham_examples_handlers_multipart"
description = "An example of decoding multipart form requests"
version = "0.0.0"
authors = ["Paul Zhang <paulzhang5511>"]
publish = false

[dependencies]
gotham = { path = "../../../gotham" }

hyper = "0.12"
mime = "0.3"
futures = "0.3"
multipart = { version = "0.16", default-features = false, features = ["server"] }
