[package]
name = "gotham_examples_handlers_multipart"
description = "An example of decoding multipart form requests"
version = "0.0.0"
authors = ["Paul Zhang <paulzhang5511>"]
publish = false

[dependencies]
gotham = { path = "../../../gotham" }

hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
mime = "0.3"
futures-preview = "0.3.0-alpha.19"
multipart = { version = "0.16", default-features = false, features = ["server"] }
