[package]
name = "gotham_examples_handlers_multipart"
description = "An example of decoding multipart form requests"
version = "0.0.0"
authors = ["Paul Zhang <paulzhang5511>"]
publish = false
edition = "2018"

[dependencies]
gotham = { path = "../../../gotham" }
futures = "0.3.1"
multipart = { version = "0.18", default-features = false, features = ["server"] }
